--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "HotelListingDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database= HotelListingAPIDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
+  "JwtSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "YourSuperSecretKeyForTokensThatMustBeOverThan256Bits"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
